--- a/peering/concept_cluster_peering_workflow.adoc
+++ b/peering/concept_cluster_peering_workflow.adoc
@@ -9,8 +9,11 @@ summary: "Setting up a peering relationship involves preparing each cluster for 
 :imagesdir: ../media/
 
 [.lead]
+You can set up a peering relationship by using the ONTAP System Manager with ONTAP 9.7 or earlier.
 Setting up a peering relationship involves preparing each cluster for peering, creating intercluster logical interfaces (LIFs) on each node of each cluster, setting up a cluster peer relationship, and then setting up an SVM peering relationship.
 
 image::../media/cluster_peering_workflow.gif[Image is described in the surrounding text]
 
 If you are running ONTAP 9.2 or earlier, you create an SVM peering relationship while creating a data protection relationship between the source volume and the destination volume.
+
+// BURT 1415746, 10 JAN 2022
