--- a/peering/reference_prerequisites_for_cluster_peering.adoc
+++ b/peering/reference_prerequisites_for_cluster_peering.adoc
@@ -2,14 +2,14 @@
 permalink: peering/reference_prerequisites_for_cluster_peering.html
 sidebar: sidebar
 keywords: cluster, peer, connectivity, port, ip, address, subnet, firewall, cluster-naming, requirement, prerequisite, prerequisite for cluster peering
-summary: "Before you set up cluster peering, you should confirm that the connectivity, port, IP address, subnet, firewall, and cluster-naming requirements are met."
+summary: "Before you set up cluster peering using the ONTAP System Manager 'classic' interface with ONTAP 9.7 or earlier, you should confirm that the connectivity, port, IP address, subnet, firewall, and cluster-naming requirements are met."
 ---
 = Prerequisites for cluster peering
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-Before you set up cluster peering, you should confirm that the connectivity, port, IP address, subnet, firewall, and cluster-naming requirements are met.
+Before you set up cluster peering using the ONTAP System Manager _classic_ interface with ONTAP 9.7 or earlier, you should confirm that the connectivity, port, IP address, subnet, firewall, and cluster-naming requirements are met.
 
 == Connectivity requirements
 
@@ -58,6 +58,8 @@ Although HTTPS is not required when you set up cluster peering using the CLI, HT
 
 The default `intercluster` firewall policy allows access through the HTTPS protocol and from all IP addresses (0.0.0.0/0). You can modify or replace the policy if necessary.
 
-*Related information*
+.Related information
 
 https://docs.netapp.com/us-en/ontap/data-protection/index.html[Data protection]
+
+// BURT 1415746, 10 JAN 2022
