--- a/peering/task_creating_svm_peers.adoc
+++ b/peering/task_creating_svm_peers.adoc
@@ -2,14 +2,14 @@
 permalink: peering/task_creating_svm_peers.html
 sidebar: sidebar
 keywords: storage, virtual, machine, svm, peer, enable, establish, relationship, data, protection, create, create svm peer relationship
-summary: "The storage virtual machine (SVM) peering enables you to establish a peer relationship between two SVMs for data protection."
+summary: "Beginning with ONTAP 9.3, until ONTAP 9.7, you can use the ONTAP System Manager 'classic' interface to create SVM peer relationships. The storage virtual machine (SVM) peering enables you to establish a peer relationship between two SVMs for data protection."
 ---
-= Create SVM peer relationship
+= Create SVM peer relationships
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-The storage virtual machine (SVM) peering enables you to establish a peer relationship between two SVMs for data protection.
+Beginning with ONTAP 9.3, until ONTAP 9.7, you can use the ONTAP System Manager _classic_ interface to create SVM peer relationships. The storage virtual machine (SVM) peering enables you to establish a peer relationship between two SVMs for data protection.
 
 .Steps
 
@@ -21,3 +21,5 @@ The storage virtual machine (SVM) peering enables you to establish a peer relati
 == What to do next
 
 You can view the intercluster LIFs, cluster peer relationship, and SVM peer relationship in the Summary window.
+
+// BURT 1415746, 10 JAN 2022
