Update per BURT 1446851.

--- a/nfs-config-esxi/task_configuring_your_network_for_best_performance.adoc
+++ b/nfs-config-esxi/task_configuring_your_network_for_best_performance.adoc
@@ -11,6 +11,8 @@ summary: "Ethernet networks vary greatly in performance. You can maximize the pe
 [.lead]
 Ethernet networks vary greatly in performance. You can maximize the performance of the network by selecting specific configuration values.
 
+For more information, .
+
 .Steps
 
 . Connect the host and storage ports to the same network.
@@ -23,6 +25,8 @@ It is best to connect to the same switches.
 
 . Enable jumbo frames if desired and supported by your network.
 +
-Jumbo frames should have an MTU of 9000 for ESXi hosts and storage systems and 9216 for most switches.
+Jumbo frames should have an MTU of 9000 for ESXi hosts and storage systems, and 9216 for most switches. All network devices in the data path -- including ESXi NICs, storage NICs, and switches -- must support jumbo frames and should be configured for their maximum MTU values.
 +
-All devices in the data path, including ESXi NICs, storage NICs, and switches, must support jumbo frames.
+For more information, see link:https://docs.netapp.com/us-en/ontap/performance-admin/check-network-settings-data-switches-task.html[Check the network settings on the data switches^] and the switch vendor documentation.
+
+// 2022-01-10, BURT 1446851
