--- a/volume-move/reference_where_to_find_additional_information.adoc
+++ b/volume-move/reference_where_to_find_additional_information.adoc
@@ -11,6 +11,8 @@ summary: "If you want more information about administering ONTAP, you can see th
 [.lead]
 If you want more information about administering ONTAP, you can see the ONTAP 9 product library.
 
-*Related information*
+.Related information
 
 https://docs.netapp.com/ontap-9/index.jsp[ONTAP 9 Documentation Center]
+
+// BURT 1415751, 10 JAN 2022    THIS FILE WAS REMOVED FROM THE SIDEBAR
