--- a/volume-move/task_planning_method_timing_volume_move.adoc
+++ b/volume-move/task_planning_method_timing_volume_move.adoc
@@ -2,14 +2,14 @@
 permalink: volume-move/task_planning_method_timing_volume_move.html
 sidebar: sidebar
 keywords: system, manager, volume, manual, cutover, lun, report, node, advance, procedure, command-line, interface, cli, plan, plan the method and timing of a volume move
-summary: "You can use System Manager to move a volume and to decide whether to have a manual cutover. If you need to update LUN reporting nodes, you must follow an advanced procedure in the command-line interface (CLI). Optionally, you can also plan the timing of a volume move."
+summary: "You can use the ONTAP System Manager 'classic' interface with ONTAP 9.7 or earlier to move a volume and to decide whether to have a manual cutover. If you need to update LUN reporting nodes, you must follow an advanced procedure in the command-line interface (CLI). Optionally, you can also plan the timing of a volume move."
 ---
 = Plan the method and timing of a volume move
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to move a volume and to decide whether to have a manual cutover. If you need to update LUN reporting nodes, you must follow an advanced procedure in the command-line interface (CLI). Optionally, you can also plan the timing of a volume move.
+You can use the ONTAP System Manager _classic_ interface with ONTAP 9.7 or earlier to move a volume and to decide whether to have a manual cutover. If you need to update LUN reporting nodes, you must follow an advanced procedure in the command-line interface (CLI). Optionally, you can also plan the timing of a volume move.
 
 .About this task
 
@@ -37,22 +37,24 @@ The volume move operation is nondisruptive, regardless of whether you choose aut
 If the volume does not contain LUNs or if the cluster contains only two nodes, you can skip this step.
 
 . Plan a time using the following considerations:
- ** A volume move operation might take more time than expected because moves are designed to occur nondisruptively in the background in a manner that preserves client access and overall system performance.
+* A volume move operation might take more time than expected because moves are designed to occur nondisruptively in the background in a manner that preserves client access and overall system performance.
 +
 For example, ONTAP throttles the resources that are available to the volume move operation.
 
- ** If you want the move to occur as quickly as possible, you must select a time with less cluster activity, especially the following activities:
-  *** I/O operations on the volume
-  *** Jobs using background resources, for example, when controller CPU usage is less than 50 percent
-  *** Jobs using the cluster interconnect
- ** A move cannot be started while the volume is affected by the following operations: volume offline, restrict, or destroy; SnapMirror resync, break, or restore; and Snapshot restore.
+* If you want the move to occur as quickly as possible, you must select a time with less cluster activity, especially the following activities:
+** I/O operations on the volume
+** Jobs using background resources, for example, when controller CPU usage is less than 50 percent
+** Jobs using the cluster interconnect
+* A move cannot be started while the volume is affected by the following operations: volume offline, restrict, or destroy; SnapMirror resync, break, or restore; and Snapshot restore.
 +
 You must wait for any of these specific operations to finish before you can start the move.
 
- ** While the volume move operation occurs, a MetroCluster switchback cannot occur, although a switchover can occur.
- ** MetroCluster switchbacks are blocked when volume move operations are in progress for volumes belonging to the switched over site. Switchbacks are not blocked when volume move operations are in progress for volumes local to the surviving site.
- ** Forced MetroCluster switchovers can occur when volume move operations are in progress.
+* While the volume move operation occurs, a MetroCluster switchback cannot occur, although a switchover can occur.
+* MetroCluster switchbacks are blocked when volume move operations are in progress for volumes belonging to the switched over site. Switchbacks are not blocked when volume move operations are in progress for volumes local to the surviving site.
+* Forced MetroCluster switchovers can occur when volume move operations are in progress.
 
-*Related information*
+.Related information
 
-xref:task_verifying_lun_reporting_nodes_after_moving_volume.adoc[Verifying LUN reporting nodes after moving a volume]
+link:task_verifying_lun_reporting_nodes_after_moving_volume.html[Verifying LUN reporting nodes after moving a volume]
+
+// BURT 1415751, 10 JAN 2022
