--- a/volume-move/task_updating_lun_reporting_nodes_after_moving_volume.adoc
+++ b/volume-move/task_updating_lun_reporting_nodes_after_moving_volume.adoc
@@ -1,7 +1,7 @@
 ---
 permalink: volume-move/task_updating_lun_reporting_nodes_after_moving_volume.html
 sidebar: sidebar
-keywords: volume, move, contain, lun, ha, pair, remote, node, selective, lun, map, slm, reporitng-node, list, partner, update lun reporting nodes after moving a volume
+keywords: volume, move, lun, ha, pair, remote, node, lun, map, slm, reporting-node, partner, lun reporting nodes
 summary: "If the volume that you moved contained LUNs and the volume is now on a different HA pair, you should remove all remote nodes from the Selective LUN Map (SLM) reporting-nodes list. The LUN map then contains only the owner node and its HA partner, which ensures that only optimized LUN paths are used."
 ---
 = Update LUN reporting nodes after moving a volume
