--- a/iscsi-config-windows/index.adoc
+++ b/iscsi-config-windows/index.adoc
@@ -35,4 +35,4 @@ a| *To complete this task using...* a| *See this content...*
 | The ONTAP command line interface (CLI) | https://docs.netapp.com/us-en/ontap/san-admin/lun-setup-workflow-concept.html[LUN setup workflow with the CLI]
 |===
 
-// 2022-01-11
+// 2022-01-11, BURT 1449741
