--- a/iscsi-config-rhel/index.adoc
+++ b/iscsi-config-rhel/index.adoc
@@ -32,6 +32,6 @@ For additional details about SAN Administration, consult the https://docs.netapp
 [cols=2*, options=header]
 |===
 a| *To complete this task using...* a| *See this content...*
-| The redesigned System Manager (available with 9.7 and later) | https://docs.netapp.com/us-en/ontap/task_san_provision_linux.html[Provision SAN storage for Linux servers]
-| The ONTAP command line interface (CLI) | https://docs.netapp.com/us-en/ontap/san-admin/lun-setup-workflow-concept.html[LUN setup workflow with the CLI]
+| The redesigned System Manager (available with 9.7 and later) | https://docs.netapp.com/us-en/ontap/task_san_provision_linux.html[Provision SAN storage for Linux servers^]
+| The ONTAP command line interface (CLI) | https://docs.netapp.com/us-en/ontap/san-admin/lun-setup-workflow-concept.html[LUN setup workflow with the CLI^]
 |===
