--- a/snmp-config/task_adding_snmp_traphost.adoc
+++ b/snmp-config/task_adding_snmp_traphost.adoc
@@ -2,14 +2,14 @@
 permalink: snmp-config/task_adding_snmp_traphost.html
 sidebar: sidebar
 keywords: system, manager, add, traphost, snmp, notification, trap, protocol, generate, cluster, data, host, add an snmp traphost
-summary: "You can use the System Manager to add a traphost (SNMP manager) to receive SNMP notifications (SNMP trap protocol data units) when traps are generated in the cluster."
+summary: "You can use the ONTAP System Manager 'classic' interface with ONTAP 9.7 or earlier to add a traphost (SNMP manager) to receive SNMP notifications (SNMP trap protocol data units) when traps are generated in the cluster."
 ---
 = Add an SNMP traphost
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use the System Manager to add a traphost (SNMP manager) to receive SNMP notifications (SNMP trap protocol data units) when traps are generated in the cluster.
+You can use the ONTAP System Manager _classic_ interface with ONTAP 9.7 or earlier to  add a traphost (SNMP manager) to receive SNMP notifications (SNMP trap protocol data units) when traps are generated in the cluster.
 
 .Before you begin
 
@@ -24,12 +24,14 @@ http://www.netapp.com/us/media/tr-4220.pdf[NetApp Technical Report 4220: SNMP Su
 .Steps
 
 . In the SNMP window, click *EDIT* to open the *Edit SNMP Settings* dialog box.
-. In the *Trap Hosts* tab, verify that the *Enable traps* check box is selected and click *Add*.
-. Enter the traphost IP address, and then click *OK* in the *Trap Hosts* pane.
+. [[step2-verify-enable-traps]]In the *Trap Hosts* tab, verify that the *Enable traps* check box is selected and click *Add*.
+. [[step3-enter-traphost-ip]]Enter the traphost IP address, and then click *OK* in the *Trap Hosts* pane.
 +
 The IP address of an SNMP traphost can be IPv4 or IPv6.
 +
 image::../media/snmp_add_traphost.gif[This image shows the Edit SNMP Settings dialog box, Traphosts tab, in which the traphost status "enabled" is checked and the example traphost IP address "192.0.2.0" is entered.]
 
-. To add another traphost, repeat Steps <<STEP_06A7DDCA00F1443EBE5734C252FC2EE9,#STEP_06A7DDCA00F1443EBE5734C252FC2EE9>> and <<STEP_2E611821457E4536A4E676BE15105C9E,#STEP_2E611821457E4536A4E676BE15105C9E>>.
+. To add another traphost, repeat <<step2-verify-enable-traps,Step 2>> and <<step3-enter-traphost-ip,Step 3>>.
 . When you finish adding traphosts, click *OK* in the *Edit SNMP Settings* dialog box.
+
+// BURT 1415755, 11 JAN 2022
