--- a/volume-disaster-prep/index.adoc
+++ b/volume-disaster-prep/index.adoc
@@ -24,15 +24,6 @@ xref:../peering/index.html[Cluster and SVM peering configuration]
 * You have enabled the SnapMirror license on both the source and the destination clusters.
 * You want to use default policies and schedules, and not create custom policies.
 * You want to use best practices, not explore every available option (ONTAP 9.7 and earlier).
-+
-https://docs.netapp.com/us-en/ontap/[ONTAP System Manager documentation]
-
-If these assumptions are not correct for your situation, or if you want more conceptual background information, you should see the following resources:
-
-* https://docs.netapp.com/us-en/ontap/volumes/index.html[Logical storage management^]
-* http://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-cmpr/GUID-5CB10C70-AC11-41C0-8C16-B4D0DF916E9B.html[ONTAP 9 commands^]
-+
-Provides the set of commands for configuring and managing SnapMirror relationships. You might want to use the SnapMirror commands to write a script that creates multiple SnapMirror relationships.
 
 == Other ways to do this in ONTAP
 
@@ -45,3 +36,4 @@ Provides the set of commands for configuring and managing SnapMirror relationshi
 |===
 
 // 2021-12-17, BURT 1446398
+// 2022-1-24, remove unnecessary links  
