--- a/volume-backup-snapvault/index.adoc
+++ b/volume-backup-snapvault/index.adoc
@@ -2,16 +2,16 @@
 permalink: volume-backup-snapvault/index.html
 sidebar: sidebar
 keywords: content, configure, snapvault, backup, relationship, volume, cluster, read-only, copies, copy, locate, destination, volume, restoring, restore, data, corrupt, lost, volume backup using snapvault overview
-summary: "This content describes how to quickly configure SnapVault backup relationships between volumes that are located in different clusters. The SnapVault backup contains a set of read-only backup copies, which are located on a destination volume that you can use for restoring data when data is corrupted or lost."
+summary: "You can quickly configure SnapVault backup relationships between volumes that are located in different clusters. The SnapVault backup contains a set of read-only backup copies, which are located on a destination volume that you can use for restoring data when data is corrupted or lost."
 ---
 = Volume backup using SnapVault overview
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-This content describes how to quickly configure SnapVault backup relationships between volumes that are located in different clusters. The SnapVault backup contains a set of read-only backup copies, which are located on a destination volume that you can use for restoring data when data is corrupted or lost.
+You can quickly configure SnapVault backup relationships between volumes that are located in different clusters. The SnapVault backup contains a set of read-only backup copies, which are located on a destination volume that you can use for restoring data when data is corrupted or lost.
 
-You should use this content if you want to create SnapVault backup relationships for volumes in the following way:
+Use this procedure if you want to create SnapVault backup relationships for volumes in the following way:
 
 * You are working with clusters running ONTAP 9.
 * You are a cluster administrator.
@@ -25,12 +25,20 @@ xref:../peering/index.html[Cluster and SVM peering configuration]
 * You want to use best practices, not explore every available option.
 * You do not want to read a lot of conceptual background.
 * You want to use System Manager, not the ONTAP command-line interface or an automated scripting tool.
-* You want to use the _Classic_ System Manager UI for ONTAP 9.7 and earlier releases, not the ONTAP System Manager UI for ONTAP 9.7 and later.
-+
-https://docs.netapp.com/us-en/ontap/[ONTAP System Manager documentation^]
+* You want to use the System Manager classic interface for ONTAP 9.7 and earlier releases, not the ONTAP System Manager UI for ONTAP 9.7 and later.
 
-If these assumptions are not correct for your situation, or if you want more conceptual background information, you should see the following resources:
+If these assumptions are not correct for your situation, or if you want more conceptual background information, you should see the following resource:
 
-* https://docs.netapp.com/us-en/ontap/data-protection/index.html[Data protection^]
-* http://www.netapp.com/us/media/tr-4015.pdf[NetApp Technical Report 4015: SnapMirror Configuration and Best Practices for ONTAP 9.1, 9.2^]
-* http://www.netapp.com/us/media/tr-4183.pdf[NetApp Technical Report 4183: SnapVault Best Practices^]
+link:http://www.netapp.com/us/media/tr-4183.pdf[NetApp Technical Report 4183: SnapVault Best Practices^]
+
+== Other ways to do this in ONTAP
+
+[cols=2,options="header"]
+|===
+| To perform these tasks with... | See this content...
+| The redesigned System Manager (available with ONTAP 9.7 and later) | link:https://docs.netapp.com/us-en/ontap/task_dp_configure_mirror.html[Configure mirrors and vaults^]
+| The ONTAP command line interface | link:https://docs.netapp.com/us-en/ontap/data-protection/index.html[Data protection overview with the CLI^]
+
+|===
+
+// 2022-1-24, BURT 1446399
