--- a/volume-disaster-recovery/index.adoc
+++ b/volume-disaster-recovery/index.adoc
@@ -28,8 +28,9 @@ Use this procedure if you want to perform volume-level disaster recovery in the 
 |===
 | To perform these tasks with... | See this content...
 | The redesigned System Manager (available with ONTAP 9.7 and later) | link:https://docs.netapp.com/us-en/ontap/task_dp_serve_data_from_destination.html[Serve data from a SnapMirror destination^]
-| The ONTAP command line interface | link:https://docs.netapp.com/us-en/ontap/data-protection/index.html[Data protection overview with the CLI^]
+| The ONTAP command line interface | link:https://docs.netapp.com/us-en/ontap/data-protection/make-destination-volume-writeable-task.html[Activate the destination volume^]
 
 |===
 
 // 2022-1-24, BURT 1446392
+// 2022-1-27, update CLI link in table
