--- a/online-help-96-97/task_locking_or_unlocking_svm_user_accounts.adoc
+++ b/online-help-96-97/task_locking_or_unlocking_svm_user_accounts.adoc
@@ -1,19 +1,4 @@
 ---
 permalink: online-help-96-97/task_locking_or_unlocking_svm_user_accounts.html
-sidebar: sidebar
-keywords: lock, unlock, svm, user, account, system, manager, online, help, storage, virtual, machine
-summary: "You can use System Manager to lock or unlock storage virtual machine (SVM) user accounts."
+redirect: ontap-sm-classic/online-help-96-97/concept_svm_user_accounts.html
 ---
-= Locking or unlocking SVM user accounts
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use System Manager to lock or unlock storage virtual machine (SVM) user accounts.
-
-.Steps
-
-. Click *Storage* > *SVMs*.
-. Select the SVM, and then click *SVM Settings*.
-. In the *SVM User Details* pane, click *Users*.
-. In the *Users* window, select the user account for which you want to modify the account status, and then click either *Lock* or *Unlock*, as required.
