--- a/online-help-96-97/task_changing_passwords_for_vserver_user_accounts.adoc
+++ b/online-help-96-97/task_changing_passwords_for_vserver_user_accounts.adoc
@@ -1,20 +1,4 @@
 ---
 permalink: online-help-96-97/task_changing_passwords_for_vserver_user_accounts.html
-sidebar: sidebar
-keywords: svm, system, manager, storage, virtual, machine, online, help
-summary: "You can use System Manager to reset the password for a storage virtual machine (SVM) user account."
+redirect: ontap-sm-classic/online-help-96-97/concept_svm_user_accounts.html
 ---
-= Changing the password for SVM user accounts
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use System Manager to reset the password for a storage virtual machine (SVM) user account.
-
-.Steps
-
-. Click *Storage* > *SVMs*.
-. Select the SVM, and then click *SVM Settings*.
-. In the *SVM User Details* pane, click *Users*.
-. Select the user account for which you want to modify the password, and then click *Reset Password*.
-. In the *Reset Password* dialog box, type the new password, confirm the new password, and then click *Change*.
