--- a/online-help-96-97/task_deleting_kerberos_realm_configurations.adoc
+++ b/online-help-96-97/task_deleting_kerberos_realm_configurations.adoc
@@ -1,20 +1,4 @@
 ---
 permalink: online-help-96-97/task_deleting_kerberos_realm_configurations.html
-sidebar: sidebar
-keywords: system, manager, delete, kerberos, realm, configuration, online, help
-summary: "You can use System Manager to delete a Kerberos realm configuration."
+redirect: ontap-sm-classic/online-help-96-97/concept_kerberos_realm_services.html
 ---
-= Deleting Kerberos realm configurations
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use System Manager to delete a Kerberos realm configuration.
-
-.Steps
-
-. Click *Storage* > *SVMs*.
-. Select the SVM, and then click *SVM Settings*.
-. In the *Services* pane, click *Kerberos Realm*.
-. In the *Kerberos Realm* window, select one or more Kerberos realm configurations that you want to delete, and then click *Delete*.
-. Select the confirmation check box, and then click *Delete*.
