--- a/online-help-96-97/task_editing_preferred_domain_controllers.adoc
+++ b/online-help-96-97/task_editing_preferred_domain_controllers.adoc
@@ -1,19 +1,4 @@
 ---
 permalink: online-help-96-97/task_editing_preferred_domain_controllers.html
-sidebar: sidebar
-keywords: edit, preferred, domain, controller, system, manager, online, help, ip, address
-summary: "You can use System Manager to modify the IP address of the preferred domain controllers that are configured for a specific domain."
+redirect: ontap-sm-classic/online-help-96-97/task_adding_preferred_domain_controllers.html
 ---
-= Editing preferred domain controllers
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-You can use System Manager to modify the IP address of the preferred domain controllers that are configured for a specific domain.
-
-.Steps
-
-. Click *Storage* > *SVMs*.
-. Select the SVM, and then click *SVM Settings*.
-. In the *Preferred Domain Controllers* area of the *Domain* tab, double-click the domain controller that you want to edit.
-. Modify the IP addresses of the domain controller, and then click *Save*.
